fix alignment on tiles on landing, some css cleanup

--- a/app/styles/app/landing.sass
+++ b/app/styles/app/landing.sass
@@ -408,10 +408,12 @@
       text-align: center
       padding: 20px 0 0 0
 
-    .recent-builds h2
-      text-align: center
-
-    .recent-builds p
+    .recent-builds-text h2,
+    .user-testimonials h2,
+    .private-repos h2,
+    .recent-builds-text p,
+    .user-testimonials p,
+    .private-repos p
       text-align: center
 
     .free-for-oss br.mobile-no-break
@@ -424,20 +426,8 @@
       display: inline-block
       margin-bottom: 40px
 
-    .private-repos h2
-      text-align: center
-
-    .private-repos p
-      text-align: center
-
     .user-testimonials
       margin-bottom: 50px
-
-    .user-testimonials h2
-      text-align: center
-
-    .user-testimonails p
-      text-align: center
 
   @media (max-width: 640px)
     .user-testimonials
